Blender, rasterizer, and Depth stencil are no longer content. Depth stencil, viewport, frame, render target, and descriptor heaps use static pointer references.

--- a/QGL_Graphics/QGL_Graphics.vcxproj
+++ b/QGL_Graphics/QGL_Graphics.vcxproj
@@ -174,7 +174,6 @@
     <ClInclude Include="include\Content\Content-Buffers\qgl_text_format_buffer.h" />
     <ClInclude Include="include\Content\Content-Buffers\qgl_vertex_desc_header.h" />
     <ClInclude Include="include\Content\Content-Buffers\qgl_vert_elem_buffer.h" />
-    <ClInclude Include="include\Content\Content-Loaders\qgl_blender_importer.h" />
     <ClInclude Include="include\Content\Content-Loaders\qgl_brush_importer.h" />
     <ClInclude Include="include\Content\Content-Loaders\qgl_camera_importer.h" />
     <ClInclude Include="include\Content\Content-Loaders\qgl_depth_stencil_importer.h" />
@@ -187,29 +186,22 @@
     <ClInclude Include="include\Content\Content-Loaders\qgl_text_format_importer.h" />
     <ClInclude Include="include\Content\Content-Loaders\qgl_vert_desc_importer.h" />
     <ClInclude Include="include\Content\Content-Loaders\qgl_vert_elem_importer.h" />
-    <ClInclude Include="include\Content\FIle-Loaders\qgl_blender_file_loader.h" />
     <ClInclude Include="include\Content\FIle-Loaders\qgl_brush_file_loader.h" />
     <ClInclude Include="include\Content\FIle-Loaders\qgl_camera_file_loader.h" />
-    <ClInclude Include="include\Content\FIle-Loaders\qgl_depth_stencil_file_loader.h" />
     <ClInclude Include="include\Content\FIle-Loaders\qgl_graphics_config_file_loader.h" />
     <ClInclude Include="include\Content\FIle-Loaders\qgl_light_file_loader.h" />
     <ClInclude Include="include\Content\FIle-Loaders\qgl_multisample_desc_file_loader.h" />
-    <ClInclude Include="include\Content\File-Loaders\qgl_pso_file_loader.h" />
-    <ClInclude Include="include\Content\FIle-Loaders\qgl_rasterizer_file_loader.h" />
     <ClInclude Include="include\Content\FIle-Loaders\qgl_sampler_file_loader.h" />
     <ClInclude Include="include\Content\FIle-Loaders\qgl_shader_file_loader.h" />
     <ClInclude Include="include\Content\FIle-Loaders\qgl_text_format_file_loader.h" />
     <ClInclude Include="include\Content\FIle-Loaders\qgl_vert_desc_file_loader.h" />
-    <ClInclude Include="include\Content\qgl_blender.h" />
     <ClInclude Include="include\Content\qgl_brush.h" />
     <ClInclude Include="include\Content\qgl_camera.h" />
-    <ClInclude Include="include\Content\qgl_depth_stencil.h" />
     <ClInclude Include="include\Content\qgl_graphics_config.h" />
     <ClInclude Include="include\Content\qgl_model.h" />
     <ClInclude Include="include\Content\qgl_multisample_desc.h" />
     <ClInclude Include="include\Content\qgl_shader.h" />
     <ClInclude Include="include\Content\qgl_light.h" />
-    <ClInclude Include="include\Content\qgl_rasterizer.h" />
     <ClInclude Include="include\Content\qgl_sampler.h" />
     <ClInclude Include="include\Content\qgl_texture.h" />
     <ClInclude Include="include\Content\qgl_text_format.h" />
@@ -236,7 +228,10 @@
     <ClInclude Include="include\GPU\Memory\qgl_igpu_memory_allocator.h" />
     <ClInclude Include="include\GPU\qgl_graphics_device_helpers.h" />
     <ClInclude Include="include\GPU\qgl_pso.h" />
+    <ClInclude Include="include\GPU\Render\qgl_blender.h" />
+    <ClInclude Include="include\GPU\Render\qgl_depth_stencil.h" />
     <ClInclude Include="include\GPU\Render\qgl_frame.h" />
+    <ClInclude Include="include\GPU\Render\qgl_rasterizer.h" />
     <ClInclude Include="include\GPU\Render\qgl_render_target.h" />
     <ClInclude Include="include\GPU\Render\qgl_scissor.h" />
     <ClInclude Include="include\GPU\Render\qgl_viewport.h" />
@@ -261,7 +256,6 @@
     <ClCompile Include="qgl_blender.cpp" />
     <ClCompile Include="qgl_blender_buffer.cpp" />
     <ClCompile Include="qgl_blender_desc_buffer.cpp" />
-    <ClCompile Include="qgl_blender_file_loader.cpp" />
     <ClCompile Include="qgl_brush.cpp" />
     <ClCompile Include="qgl_brush_buffer.cpp" />
     <ClCompile Include="qgl_brush_file_loader.cpp" />
@@ -272,7 +266,6 @@
     <ClCompile Include="qgl_cpy_cmd_list.cpp" />
     <ClCompile Include="qgl_depth_stencil.cpp" />
     <ClCompile Include="qgl_depth_stencil_buffer.cpp" />
-    <ClCompile Include="qgl_depth_stencil_file_loader.cpp" />
     <ClCompile Include="qgl_descriptor_range.cpp" />
     <ClCompile Include="qgl_descriptor_table.cpp" />
     <ClCompile Include="qgl_dsv_descriptor_heap.cpp" />
@@ -296,10 +289,8 @@
     <ClCompile Include="qgl_multisample_desc_buffer.cpp" />
     <ClCompile Include="qgl_multisample_desc_file_loader.cpp" />
     <ClCompile Include="qgl_pso.cpp" />
-    <ClCompile Include="qgl_pso_file_loader.cpp" />
     <ClCompile Include="qgl_rasterizer.cpp" />
     <ClCompile Include="qgl_rasterizer_buffer.cpp" />
-    <ClCompile Include="qgl_rasterizer_file_loader.cpp" />
     <ClCompile Include="qgl_render_target.cpp" />
     <ClCompile Include="qgl_root_signature.cpp" />
     <ClCompile Include="qgl_rtv_descriptor_heap.cpp" />
