icontent_file supports erasing entries. Removed C++ iterators from icontent_project. icontent_project supports erasing. Make icontent_project more DLL friendly. Update tests to match. Fix open file test with storage file.

--- a/QGL_Content/QGL_Content.vcxproj
+++ b/QGL_Content/QGL_Content.vcxproj
@@ -177,6 +177,7 @@
     <ClInclude Include="include\Content-Items\qgl_string_item.h" />
     <ClInclude Include="include\Content-Items\qgl_wstring_item.h" />
     <ClInclude Include="include\Content-Project\qgl_content_project_compiler.h" />
+    <ClInclude Include="include\Content-Project\qgl_content_project_entry.h" />
     <ClInclude Include="include\File-Loaders\qgl_file_loaders.h" />
     <ClInclude Include="include\File-Loaders\qgl_file_loader_string.h" />
     <ClInclude Include="include\File-Loaders\qgl_file_loader_wstring.h" />
@@ -195,6 +196,7 @@
   <ItemGroup>
     <ClCompile Include="QGL_ContentRT.cpp" />
     <ClCompile Include="qgl_content_item.cpp" />
+    <ClCompile Include="qgl_content_project_entry.cpp" />
     <ClCompile Include="qgl_content_variant_entry.cpp" />
     <ClCompile Include="qgl_content_file_helpers.cpp" />
     <ClCompile Include="qgl_content_project_compiler.cpp" />
