--- a/QGL_Model/QGL_Model.vcxproj
+++ b/QGL_Model/QGL_Model.vcxproj
@@ -153,8 +153,7 @@
     <ClInclude Include="include\Observer-Observable\qgl_callback_observer.h" />
     <ClInclude Include="include\Observer-Observable\qgl_iobserver.h" />
     <ClInclude Include="include\Observer-Observable\qgl_subject.h" />
-    <ClInclude Include="include\Physical\qgl_body.h" />
-    <ClInclude Include="include\qgl_icomponent.h" />
+    <ClInclude Include="include\qgl_component.h" />
     <ClInclude Include="include\qgl_model_include.h" />
     <ClInclude Include="include\qgl_platform_abstraction.h" />
     <ClInclude Include="include\qgl_version.h" />
@@ -170,7 +169,6 @@
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader>Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="qgl_body.cpp" />
     <ClCompile Include="qgl_icommand.cpp" />
     <ClCompile Include="QGL_ModelRT.cpp" />
     <ClCompile Include="qgl_version.cpp" />
