--- a/QGL_Math/QGL_Math.vcxproj.filters
+++ b/QGL_Math/QGL_Math.vcxproj.filters
@@ -68,6 +68,9 @@
     <ClInclude Include="include\Shapes\qgl_rectangle.h">
       <Filter>Header Files\Shapes</Filter>
     </ClInclude>
+    <ClInclude Include="physics_structs.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
